// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field.isValid() can validate in relation to other form fields if exists 1`] = `"'password' and 'confirm password' should match."`;

exports[`Field.isValid() sets error 1`] = `"This field is required."`;

exports[`Field.makePrestine() empties error 1`] = `"This field is required."`;

exports[`Field.reset() empties error 1`] = `"This field is required."`;

exports[`Field.setAndValidate() sets and validates field 1`] = `"This field is required."`;

exports[`Form.isValid calls onChange callback 1`] = `
Array [
  Object {
    "confirmPassword": null,
    "password": null,
    "username": null,
  },
  Object {
    "confirmPassword": null,
    "password": "This field is required.",
    "username": "This field is required.",
  },
]
`;

exports[`Form.isValid sets error 1`] = `
Object {
  "confirmPassword": null,
  "password": "This field is required.",
  "username": "This field is required.",
}
`;

exports[`Form.isValid won't set error if true passed 1`] = `
Object {
  "confirmPassword": null,
  "password": null,
  "username": null,
}
`;

exports[`Form.notifyChange calls callback with value and error 1`] = `
Array [
  Object {
    "confirmPassword": null,
    "password": null,
    "username": null,
  },
  Object {
    "confirmPassword": null,
    "password": "This field is required.",
    "username": "This field is required.",
  },
]
`;
